finish text for timekeeper

--- a/timekeeper.html
+++ b/timekeeper.html
@@ -118,16 +118,18 @@
       <h3 class="section-header">Timekeeper's Design</h3>
       <p class="text">Timekeeper is designed to be simple. Users are presented with a simple navigation layout that focuses on current tasks and the schedule for the day — This is the bare minimum that allows users to get started immediately without having any roadblocks.</p>
 
-      <br><h3>image goes here</h3><br>
+      <p class="text">Based on the user’s daily tasks, Timekeeper automatically builds an optimized schedule by determining most and least productive periods throughout the day. Users can view their schedule at any time and receive notifications for their tasks.</p>
 
-      <p class="text"><strong>Lessons learned</strong></p>
-      <p class="text">Keeping track of all the students' information was the biggest problem. Given the many requirements, many participants chose to ignore the soft constraints (&#35; of overlapping schedule availability, &#35; of leaders per team, etc.) and focused their time on the hard constraints (# of students per team, student preferences, etc.) listed. It was a common trend that participants would eventually start to randomly place students together without any regard to the constraints given.</p>
+      <p class="text">Our basic features would be useful to users who don’t have the time to spend carefully and thoroughly planning their day. Timekeeper focuses on the daily events that you need to attend and tasks that must be completed.</p>
+    </div>
 
-      <p class="text">Teammatic was a research project that served the basis for my friend Carolyn’s thesis. I wanted to help her not only because she was a great person to work with, but because I really empathized with the problem that was presented. Is there really anything worse than a group member who slacks off?<br><br>While designing Teammatic, we already accepted that perfect team formation is impossible. However, we learned that instructors are generally happy with auto-generated teams based on student compatibility, as long as we provided them with the freedom and flexibility to make changes when desired, i.e. a mixed-initiative interface.</p>
+    <br>
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
-      <p class="text"><strong>Moving forward</strong></p>
-      <p class="text">The interface is a work in progress, but we are heading in the right direction based on positive user feedback (hooray!). Currently Teammatic only has the ability to generate teams; it has yet to become a fully working product. It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback. <br><br>For now, Teammatic is being used by a few involved professors, who will continue to give us insight into how we can improve the interface and how we might implement new, undiscovered features.
-      </p>
+    <!-- Outcomes Section -->
+    <div class="section-div" style="padding-top: 36px">
+      <h3 class="section-header">Moving Forward</h3>
+      <p class="text">Timekeeper has a lot of room to grow and improve. Thankfully in the realm of productivity, there’s always a need for making better use of our time. Although the app itself was never fully shipped, I would’ve liked to seen that. Perhaps the most unique feature was Timekeeper’s ability to build patterns of a user’s productivity levels &amp; habits and generate a schedule that worked best with that. Determining the actual algorithm would be a priority, no doubt.</p>
     </div>
 
     <!-- Contact Section -->
