only IA left for timekeeper

--- a/timekeeper.html
+++ b/timekeeper.html
@@ -56,10 +56,10 @@
     <!-- Intro Section -->
     <div class="section-div">
       <h1 id="project-title-secondary">Timekeeper</h1>
-      <h6>ux&amp;ui designer // UC San Diego 2016</h6>
+      <h6>ux &amp; ui designer // UC San Diego 2016</h6>
       <div class="row">
         <div class="twelve columns">
-          <img class="landing-img u-max-full-width" src="images/teamme-final.png">
+          <img class="landing-img inline-img-nopad u-max-full-width" src="images/timekeeper-mockup4.png">
         </div>
       </div>
 
@@ -75,9 +75,9 @@
       <br>
       <h5 style="padding-bottom: 16px; opacity: 0.75">Based on initial data gathering, there were a few pain points that were identified&colon;
         <ul>
-          <li>Users want information that’s specific to the current day.</li>
-          <li>Some apps provide too many options for customizing &amp; categorizing tasks. </li>
-          <li>Wishing for more guidance in task priority &amp; planning.</li>
+          <li>Users want information that is <strong>specific to the current day.</strong></li>
+          <li>Some apps provide <strong>too many options for customizing &amp; categorizing</strong> tasks. </li>
+          <li>Wishing for more <strong>guidance in task priority &amp; planning</strong>.</li>
         </ul>
       </h5>
     </div>
@@ -87,6 +87,12 @@
     <!-- Process Section -->
     <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">A Solution</h3>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img-nopad u-max-full-width" src="images/timekeeper-final.png">
+        </div>
+      </div>
+
       <p class="text">Timekeeper is built to help users become more efficient by eliminating the time spent making daily schedules. By observing phone + internet usage and when you most and least productive, Timekeeper learns and creates the most optimal schedule for you.</p>
       <p class="text">We hoped to solve the problem of task input and task guidance/prioritization.</p>
       <br>
@@ -108,9 +114,19 @@
 
       <p class="text">This IA diagram outlines the process a user would have in Timekeeper&colon;</p>
 
-      <br><h3>image goes here</h3><br>
+
+      <h6 class="img-caption">
+        <ol>
+          <li><strong>Homepage</strong>&colon; Browse products based on either brand recommendations by the app or explore current fashion trends. Promotes discoverability and aimed to maintain user attention.</li>
+          <li><strong>Liked Products</strong>&colon; The Liked Products section allows users to look back at items they were interested in, but perhaps did not intend to purchase at the moment they discovered it.</li>
+          <li><strong>Search</strong>&colon; Specific browsing for items based on brand or design type (shirts, pants, etc.). Includes navigation into Product View, which provides users with information on the selected item such as personalized fitting style and user reviews.</li>
+          <li><strong>Shopping Cart</strong>&colon; As with any app that provides an e-commerce experience, a shopping cart is available for users to keep track of to-be purchased items. IA follows that of a standard online-shopping format.</li>
+          <li><strong>Profile</strong>&colon; Body preference settings are found here. Users can edit these preferences based on their needs and the app will respond accordingly, i.e. automatically filter results to be within user sizing parameters.</li>
+        </ol>
+      </h6>
     </div>
 
+    <br>
     <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
     <!-- Outcomes Section -->
@@ -118,16 +134,25 @@
       <h3 class="section-header">Timekeeper's Design</h3>
       <p class="text">Timekeeper is designed to be simple. Users are presented with a simple navigation layout that focuses on current tasks and the schedule for the day — This is the bare minimum that allows users to get started immediately without having any roadblocks.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img-nopad u-max-full-width" src="images/timekeeper-solution.png">
+        </div>
+      </div>
 
-      <p class="text"><strong>Lessons learned</strong></p>
-      <p class="text">Keeping track of all the students' information was the biggest problem. Given the many requirements, many participants chose to ignore the soft constraints (&#35; of overlapping schedule availability, &#35; of leaders per team, etc.) and focused their time on the hard constraints (# of students per team, student preferences, etc.) listed. It was a common trend that participants would eventually start to randomly place students together without any regard to the constraints given.</p>
+      <p class="text">Based on the user’s daily tasks, Timekeeper automatically builds an optimized schedule by determining most and least productive periods throughout the day. Users can view their schedule at any time and receive notifications for their tasks.</p>
 
-      <p class="text">Teammatic was a research project that served the basis for my friend Carolyn’s thesis. I wanted to help her not only because she was a great person to work with, but because I really empathized with the problem that was presented. Is there really anything worse than a group member who slacks off?<br><br>While designing Teammatic, we already accepted that perfect team formation is impossible. However, we learned that instructors are generally happy with auto-generated teams based on student compatibility, as long as we provided them with the freedom and flexibility to make changes when desired, i.e. a mixed-initiative interface.</p>
+      <p class="text">Our basic features would be useful to users who don’t have the time to spend carefully and thoroughly planning their day. Timekeeper focuses on the daily events that you need to attend and tasks that must be completed.</p>
+    </div>
 
-      <p class="text"><strong>Moving forward</strong></p>
-      <p class="text">The interface is a work in progress, but we are heading in the right direction based on positive user feedback (hooray!). Currently Teammatic only has the ability to generate teams; it has yet to become a fully working product. It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback. <br><br>For now, Teammatic is being used by a few involved professors, who will continue to give us insight into how we can improve the interface and how we might implement new, undiscovered features.
-      </p>
+    <br>
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
+
+    <!-- Outcomes Section -->
+    <div class="section-div" style="padding-top: 36px">
+      <h3 class="section-header">Moving Forward</h3>
+      <p class="text">Timekeeper has a lot of room to grow and improve. Thankfully in the realm of productivity, there’s always a need for making better use of our time. Although the app itself was never fully shipped, I would’ve liked to seen that. Perhaps the most unique feature was Timekeeper’s ability to build patterns of a user’s productivity levels &amp; habits and generate a schedule that worked best with that. Determining the actual algorithm would be a priority, no doubt.</p>
     </div>
 
     <!-- Contact Section -->
