changed index to border

--- a/placeholder.html
+++ b/placeholder.html
@@ -1,3 +1,4 @@
+<!-- ORIGINAL INDEX, NO BORDERS AROUND PROJECT ITEMS -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,11 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>The Portfolio of Alex Tran</title>
-  <meta name="description" content="">
+  <meta name="description" content="Hello, I'm a design-centered human.">
   <meta name="author" content="">
+  <meta property="og:title" content="The Portfolio of Alex Tran" />
+  <meta property="og:description" content="Hello, I'm a design-centered human." />
+  <meta property="og:image" content="images/metaPNG.png" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -16,6 +20,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo:900|Merriweather:300,700,900|MeMerriweather+Sans:300" rel="stylesheet">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -53,7 +58,7 @@
     <div class="section-div">
       <h3 style="padding-bottom: 24px;">Welcome&#126;</h3>
       <h3 style="padding-bottom: 24px;">I’m <span style="font-weight: 800; color: #5E1AFF">Alex</span>, a design-centered human looking to improve people’s lives through the technology they use. I work to promote design thinking and solutions.</h3>
-      <h3>Proficient in a thirst for knowledge, coffee, and Overwatch.</h3>
+      <h3>Constantly thirsty for knowledge &amp; coffee.</h3>
     </div>
 
     <!-- Work Section -->
@@ -62,40 +67,32 @@
       <h5 style="line-height: 0px;"><strong>WORK</strong></h5>
       <h6 class="section-caption">delighting users, one product at a time.</h6>
       <!-- Teammatic -->
-      <div class="project-div">
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="teammatic.html">
-            <h1 style="font-size: 8rem">teammatic</h1>
-          </a>
-          <p>team-creation tool for instructors in class // INTERACTION DESIGN + PROUDCT</p>
-        </div>
+      <div class="project-div" style="padding-top: 24px">
+        <a href="teammatic.html">
+          <h1 id="project-title">Teammatic</h1>
+        </a>
+        <p>team-creation tool for instructors in class // INTERACTION DESIGN + PROUDCT</p>
       </div>
       <!-- Fitted -->
       <div class="project-div">
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="fitted.html">
-            <h1 style="font-size: 8rem;">fitted</h1>
-          </a>
-          <p>mobile app to find the right-sized clothing // INTERACTION DESIGN + PRODUCT</p>
-        </div>
+        <a href="fitted.html">
+          <h1 id="project-title">Fitted</h1>
+        </a>
+        <p>mobile app to find the right-sized clothing // INTERACTION DESIGN + PRODUCT</p>
       </div>
       <!-- Thinkabit Lab -->
       <div class="project-div">
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="thinkabit.html">
-            <h1 style="font-size: 8rem;">thinkabit lab</h1>
-          </a>
-          <p>applying human-centered design to Qualcomm's Thinkabit Lab // USER RESEARCH</p>
-        </div>
+        <a href="thinkabit.html">
+          <h1 id="project-title">Thinkabit Lab</h1>
+        </a>
+        <p>applying human-centered design to Qualcomm's Thinkabit Lab // USER RESEARCH</p>
       </div>
       <!-- Timekeeper -->
       <div class="project-div">
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="timekeeper.html">
-            <h1 style="font-size: 8rem;">timekeeper</h1>
-          </a>
-          <p>scheduling app that optimizes daily tasks // UX &amp; UI DESIGN</p>
-        </div>
+        <a href="timekeeper.html">
+          <h1 id="project-title">Timekeeper</h1>
+        </a>
+        <p>scheduling app that optimizes daily tasks // UX &amp; UI DESIGN</p>
       </div>
     </div>
 
@@ -112,7 +109,7 @@
         <p>implementing read receipts in Slack</p>
       </div> -->
       <div class="project-div">
-        <h1 style="font-size: 8rem; opacity: 0.5;">slackrr</h1>
+        <h1 id="project-title" style="opacity: 0.5;">SlackRR</h1>
         <p id="project-wip"><strong>COMING SOON</strong> - implementing read receipts in Slack</p>
       </div>
       <!-- Trackfit -->
@@ -123,12 +120,12 @@
         <p>tired of confusing fitness apps so I'm attempting to ship my own</p>
       </div> -->
       <div class="project-div">
-        <h1 style="font-size: 8rem; opacity: 0.5;">trackfit</h1>
+        <h1 id="project-title" style="opacity: 0.5;">Trackfit</h1>
         <p id="project-wip"><strong>COMING SOON</strong> - tired of confusing fitness apps so I'm attempting to ship my own</p>
       </div>
       <!-- Focus.In -->
       <div class="project-div">
-        <h1 style="font-size: 8rem; opacity: 0.5;">focus.in</h1>
+        <h1 id="project-title" style="opacity: 0.5;">Focus.in</h1>
         <p id="project-wip"><strong>COMING SOON</strong> - productivity app meant to segment your time better &amp; more efficiently</p>
       </div>
     </div>
@@ -139,8 +136,8 @@
       <h5 style="line-height: 0px;"><strong>CONTACT</strong></h5>
       <h6 class="section-caption">call me, beep me if you wanna reach me</h6>
       <div style="padding-top: 0px">
-        <h3 style="padding-bottom: 24px;">
-          <a href="#" class="contact-a">
+        <h3 class="media-contact" style="padding-bottom: 24px;">
+          <a href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top" class="contact-a">
             Email
           </a>
           &middot;
@@ -156,7 +153,7 @@
             B&#275;hance
           </a>
           &middot;
-          <a href="#" class="contact-a">
+          <a href="https://www.linkedin.com/in/alex-tran-441540a0/"  target="_blank" class="contact-a">
             Linkedin
           </a>
         </h3>
