--- a/timekeeper.html
+++ b/timekeeper.html
@@ -29,6 +29,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+  <style>
+    body  {
+      background-image: url("images/pattern.png");
+      background-color: #cccccc;
+    }
+  </style>
 </head>
 <body>
 
@@ -88,7 +94,7 @@
     <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">A Solution</h3>
       <p class="text">Timekeeper is built to help users become more efficient by eliminating the time spent making daily schedules. By observing phone + internet usage and when you most and least productive, Timekeeper learns and creates the most optimal schedule for you.</p>
-      
+
       <div class="row">
         <div class="twelve columns">
           <img class="landing-img inline-img-nopad u-max-full-width" src="images/timekeeper-final.png">
