--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+  <style>
+    body  {
+      background-image: url("images/pattern.png");
+      background-color: #cccccc;
+    }
+  </style>
+
 </head>
 <body>
 
