--- a/teammatic.html
+++ b/teammatic.html
@@ -29,6 +29,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+  <style>
+    body  {
+      background-image: url("images/pattern.png");
+      background-color: #cccccc;
+    }
+  </style>
 </head>
 <body>
 
