--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="section-div">
       <h3 style="padding-bottom: 24px;">Welcome&#126;</h3>
       <h3 style="padding-bottom: 24px;">I’m <span style="font-weight: 800; color: #5E1AFF">Alex</span>, a design-centered human looking to improve people’s lives through the technology they use. I work to promote design thinking and solutions.</h3>
-      <h3>Constantly craving knowledge &amp; coffee.</h3>
+      <h3>Constantly thirsty for knowledge &amp; coffee.</h3>
     </div>
 
     <!-- Work Section -->
