trimmed Thinkabit text

--- a/thinkabit.html
+++ b/thinkabit.html
@@ -68,13 +68,13 @@
           <h6><strong>timeline</strong><br>March 2016 - June 2016</h6>
         </div>
         <div class="three columns">
-          <h6><strong>methods &amp; tools</strong><br>Ideation<br>Paper Prototyping<br>Hi-Fi Screen Design<br>Storyboarding<br>Needfinding<br>Interviewing</h6>
+          <h6><strong>methods &amp; tools</strong><br>Ideation<br>Paper Prototyping<br>Hi-Fi Mockup Design<br>Storyboarding<br>Needfinding<br>Interviewing</h6>
         </div>
         <div class="three columns">
           <h6><strong>teammates</strong><br>Sophia Krause-Levy<br>Benjamin Lebell<br>Alex Mello<br>Susan Lee<br>Joel Rosenthal</h6>
         </div>
         <div class="three columns">
-          <h6><strong>about the project</strong><br>This project is for Cognitive Design Studio&semi; students learn to integrate research into design &amp; development and apply human-centered design through real-world opportunities.</h6>
+          <h6><strong>about the project</strong><br>This project is for Cognitive Design Studio&semi; integrating research into design &amp; development and apply human-centered design in the real-world.</h6>
         </div>
       </div>
     </div>
@@ -84,11 +84,12 @@
     <!-- Problem Section -->
     <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Qualcomm Thinkabit Lab</h3>
-      <p class="text">Our design focus revolved around Qualcomm's Thinkabit Lab, on their Thursday "Tinkering Nights". It's a chance for Qualcomm employees to bring their family members in to play around with some of the technology Qualcomm has to offer, such as their Arduino boards.</p>
-      <p class="text">The problem with the Thinkabit Lab is that it can be quite intimidating for newcomers and even returners who are unsure how to proceed. The lab space is poorly organized. Due to the small amount of hosts, people are not always greeted when they enter which leads to further confusion and intimidation. When this occurs people are much less likely to enjoy their experience and return in the following weeks.</p>
+      <p class="text">Our design focus revolved around Qualcomm's Thinkabit Lab, a makerspace for Qualcomm employees &amp; family members to tinker with the technology Qualcomm has, such as their Arduino boards. The problem with the Thinkabit Lab is that it can be quite intimidating for newcomers and even returners who are unsure how to proceed.</p>
+
+      <h5 style="padding-bottom: 16px; opacity: 0.75">Poor organization of space &amp; limited guidance led to confused users, which led to <strong>low retention rate</strong> and a <strong>lacking experience</strong>.</h5>
 
       <h5><strong>Competitive Analysis</strong></h5>
-      <p class="text">In the beginning, we had a very vague understanding of our design opportunity. We knew we would be helping Qualcomm employees engage in tinkering and building activities, but did not know the manner in which to do so. Therefore, we each conducted two competitive analyses and interviews to better understand the existing services and organizations that utilize a type of "makerspace". From this we learned about some existing features of similar makerspace environments that generate a beneficial and immersive experience.</p>
+      <p class="text">We conducted two competitive analyses and interviews to better understand existing makerspaces. From this we learned about some existing features of similar makerspace environments that generate a beneficial and immersive experience.</p>
 
       <div class="row" style="padding-left: 48px; padding-right: 48px">
         <div class="twelve columns">
@@ -97,7 +98,7 @@
       </div>
 
       <h5><strong>The Needs</strong></h5>
-      <p class="text">For our first trip, we wanted to obtain a better understanding of the problem areas within the lab. Therefore, we conducted several interviews with the employees to find out what they felt were the main issues. We also observed individuals while they were tinkering and navigating throughout the lab. After our initial findings, it became clear that there was a lack of general information on the Lab, as well as what materials were available to use. This, coupled with a lack of provided help led to frustrated users&colon;</p>
+      <p class="text">We conducted several interviews with employees &amp; observed individuals throughout their experience. Initial findings made it clear that there was a lack of general information as well as available materials. A lack of provided help lead to frustrated users&colon;</p>
 
       <div class="row" style="padding-left: 48px; padding-right: 48px">
         <div class="twelve columns">
@@ -112,7 +113,7 @@
     <!-- Implementation Section -->
     <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Ideation to Implementation</h3>
-      <p class="text">Having 10 weeks to complete this project, my team and I developed a pseudo-Agile approach to better streamline our goals. Each time we met at the Thinkabit Lab, the work was distributed in a way that provided equal attention to both research (i.e. interviews, observations) and prototype development. Aside from in-class discussions, we also designated 1-2 times to meet outside to update weekly progress via a GoogleDoc.</p>
+      <p class="text">We developed a pseudo-Agile approach to better streamline our goals. Each time we met at the Thinkabit Lab, the work was distributed in a way that provided equal attention to both research (i.e. interviews, observations) and prototype development. Aside from in-class discussions, we also designated 1-2 times to meet outside to update weekly progress via a GoogleDoc.</p>
 
       <!-- Timeline picture -->
       <div class="row">
@@ -121,19 +122,16 @@
         </div>
       </div>
 
-      <h3 class="section-header">Conducting Research</h3>
-      <p class="text">Given that we had exposure to the lab only once a week, we sought to take advantage of the time we had by conducting multiple forms of data collection. While our target audience was predetermined, we still had to find ways to empathize with this group of people. From our initial interactions, we knew there was a wide range of experience levels among the tinkerers, and that better categorizing and understanding the specific needs of each of these subgroups would be essential to creating a solution. To determine this, we performed interviews with all of the employees and children present each time we went to the lab.</p>
+      <h5><strong>Conducting Research</strong></h5>
+      <p class="text">While our target audience was predetermined, we still had to find ways to empathize with this group of people. Initial interactions determined a wide range of experience levels among users; better categorization &amp; understanding the specific needs of each of these subgroups would be essential.</p>
 
-      <h3 class="section-header">Data Interpretation</h3>
-      <p class="text">I conducted a number of interviews, making sure to ask open-ended questions about their experience in the Lab. What I gathered was that there were a lot of first-time users, and there was a lot of confusion in getting started. We broke our findings down into 5 these five main categories. In each, our interviews and immersion experiences pointed out the problems. From there, we asked ourselves, "what types of prototypes can we generate that addresses these problem areas?"</p>
+      <h5 style="padding-bottom: 16px; opacity: 0.75">There were a lot of first-time users, and a lot of confusion getting started. Our findings were broken down into 5 main categories.</h5>
 
       <div class="row">
         <div class="twelve columns">
           <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-problems.png">
         </div>
       </div>
-
-      <p class="text">The affinity diagram helped us determine the different employees and their needs. We also created personas using the data we had collected from previous weeks. These personas highlight the different types of people that come into the lab and allowed us to focus on the specific characters, instead of typical demographics and bring their needs to life. They included: first timers, beginners, intermediate, experts and parents with children. This helped us determine the different target audiences and what they expect to get out of the lab, as well as what problems they currently have.</p>
     </div>
 
     <br>
@@ -152,9 +150,9 @@
         </div>
       </div>
 
-      <p class="text">One of the leading ideas was to re-organize the space and put up labels, but that only helped solve 2 of the categories. In the end, we decided to make a pamphlet, as we felt it was the best solution that could address the variety of problem areas. For the pamphlet I worked with Alex and Sophia to go through several stages of testing. At first, we had a simple version that was created by folding together paper, with post-it notes on each page that included the potential item that would go there. These included a map, table of contents, and list of materials.</p>
+      <p class="text">Continued interviews with employees helped determine the layout of the pamphlet. Since we planned on having the pamphlet available in the lab as well, we asked people to look at a prototype and observed where they looked first to help further determine ordering of pages.</p>
 
-      <p class="text">By interviewing 10 employees the order of the pages they believed each aspect of the pamphlet should go, we began to determine its layout. The results showed that the majority of people thought tracking progress should go on page 5 (70&#37;). The map should go on page 3 (30&#37;) or 6 (30). The list of materials should go on page 4 (50&#37;). The profile of hosts should go on page 3 (40&#37;). The purpose of the lab should go on page 2 (60&#37;), and the table of contents should go on page 1 (70&#37;) or may not be needed (30&#37;). We also asked people if they believed we should make the pamphlet in the format of a book or stick with a pamphlet, 14 people said a pamphlet and 6 said a book. With this in mind, the table of contents became unnecessary and was removed. Since we plan on having the pamphlet available in the lab as well, we asked people to look at a prototype and observed where they looked first to help further determine ordering of pages.</p>
+      <p class="text">The results showed that the majority of people thought tracking progress should go on page 5 (70&#37;). The map should go on page 3 (30&#37;) or 6 (30). The list of materials should go on page 4 (50&#37;). The profile of hosts should go on page 3 (40&#37;). The purpose of the lab should go on page 2 (60&#37;), and the table of contents should go on page 1 (70&#37;) or may not be needed (30&#37;).</p>
 
       <!-- Pamphlet picture -->
       <div class="row">
@@ -177,11 +175,14 @@
         </div>
       </div>
 
-      <p class="text">Our design solution includes several parts. We redesigned the email sent out to employees so that it is more concise and does not give any false beliefs of the Lab. It is a simple overview to explain the purpose of the Lab, tell people what is available to work with, and who can come. Attached to this is a PDF of the pamphlet (picture above) that explains the Lab in more detail.</p>
+      <h6 class="img-caption">
+        <ol>
+          <li><strong>Getting Started</strong>&colon; driven by concerns users had on how to gauge experience level. A bio for the Lab and its hosts was included, as well as a list of the materials and a map. This was driven our findings of 1) difficulty of navigating the space, and 2) understanding what is available to use.</li>
+          <li><strong>Description</strong>&colon; briefly explains the purpose of the Lab. Users get a sense of the experience before digging deeper. The goal was to provide users, especially first-timers, a sense of comfort wih the vast array of materials provided. A better onboarding process would easily reduce the need for troubleshooting.</li>
+        </ol>
+      </h6>
 
-      <p class="text">On the back of the pamphlet we have the "Getting Started" section. This was driven by concerns users had on how to gauge experience level. We had also tested preferences, such as taglines and bio descriptions. Inside the pamphlet, we included a bio for the Lab and its hosts, as well as a list of the materials and a map. Again, the decision to include this was driven our findings of 1) difficulty of navigating the space, and 2) understanding what is available to use.</p>
-
-      <p class="text">The second page of the pamphlet has a short description of the lab to briefly explain its purpose during tinkering nights. This way, people get a sense of the goals of the nights before digging deeper into the pamphlet. Overall, the intentions of the pamphlet were to provide users, especially first-timers, a sense of comfort wih the vast array of materials they had the freedom to work with. It would help the onboarding process of working with the Arduino and laser printer much easier and reduce the need for troubleshooting.</p>
+      <p class="text">Our design solution includes several parts. A redesigned email sent out to employees addresses any false assumptions prior to attending. A simple overview explains the purpose of the Lab, tells people what materials are available. An attached pamphlet (pictured above) explains the Lab in more detail.</p>
     </div>
 
     <br>
@@ -189,14 +190,12 @@
 
     <div class="section-div" style="padding-top: 36px">
       <h3 class="section-header">Conclusion</h3>
-
-      <p class="text">With the 10 weeks over, we ended up with our working product of the pamphlet guide to share with members of the Lab. We received a number of positive responses, a majority of which were happy with the easy-to-access information that had not really exisited up until this point. By targeting the key problem areas of usability within the Lab, we were able to come up with a feasible solution that utilized these ethnographic prinicples of observation and human-centered research.</p>
-
       <div class="row">
         <div class="twelve columns">
           <img class="landing-img u-max-full-width" src="images/thinkabit-conclusion.png" style="padding-right: 96px; padding-left: 48px">
         </div>
       </div>
+      <p class="text">Our working product of the pamphlet guide was shared with users &amp; received a number of positive responses, a majority of which approving the easy-to-access information. Targeting the key problem areas of usability allowed us to come up with a feasible solution that utilized ethnographic prinicples of observation and human-centered research.</p>
     </div>
 
 
