just need timekeeper IA image left

--- a/timekeeper.html
+++ b/timekeeper.html
@@ -124,11 +124,10 @@
 
       <h6 class="img-caption">
         <ol>
-          <li><strong>Homepage</strong>&colon; Browse products based on either brand recommendations by the app or explore current fashion trends. Promotes discoverability and aimed to maintain user attention.</li>
-          <li><strong>Liked Products</strong>&colon; The Liked Products section allows users to look back at items they were interested in, but perhaps did not intend to purchase at the moment they discovered it.</li>
-          <li><strong>Search</strong>&colon; Specific browsing for items based on brand or design type (shirts, pants, etc.). Includes navigation into Product View, which provides users with information on the selected item such as personalized fitting style and user reviews.</li>
-          <li><strong>Shopping Cart</strong>&colon; As with any app that provides an e-commerce experience, a shopping cart is available for users to keep track of to-be purchased items. IA follows that of a standard online-shopping format.</li>
-          <li><strong>Profile</strong>&colon; Body preference settings are found here. Users can edit these preferences based on their needs and the app will respond accordingly, i.e. automatically filter results to be within user sizing parameters.</li>
+          <li><strong>Homepage</strong>&colon; Navigate through a set of links. Reduced complexity allows users to have a simplified experience that stays within the focus on the app.</li>
+          <li><strong>Current Tasks</strong>&colon; Users have the ability to add and edit tasks. Tasks are categorized by estimated time to completion &amp; priority. </li>
+          <li><strong>Today's Schedule</strong>&colon; Displays optimized schedule that updates based on task list changes. Functionality is similar to Google Calendar.</li>
+          <li><strong>Settings</strong>&colon; Customizations can be made depending on user needs. Notification and background monitoring options can be found here.</li>
         </ol>
       </h6>
     </div>
