added timekeeper ia

--- a/timekeeper.html
+++ b/timekeeper.html
@@ -121,6 +121,12 @@
 
       <p class="text">This IA diagram outlines the process a user would have in Timekeeper&colon;</p>
 
+      <!-- IA picture -->
+      <div class="row">
+        <div class="offset-by-one ten columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/timekeeper-ia.png">
+        </div>
+      </div>
 
       <h6 class="img-caption">
         <ol>
