fixed email linkedin links

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <h6 class="section-caption">call me, beep me if you wanna reach me</h6>
       <div style="padding-top: 0px">
         <h3 style="padding-bottom: 24px; font-size: 3.5rem">
-          <a href="#" class="contact-a">
+          <a href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top" class="contact-a">
             Email
           </a>
           &middot;
@@ -163,7 +163,7 @@
             Dribbble
           </a>
           &middot;
-          <a href="#" class="contact-a">
+          <a href="http://linkedin.com/in/alex-tran-441540a0/" target="_blank" class="contact-a">
             Linkedin
           </a>
         </h3>
